--- a/zzcatalogoweb/index.html
+++ b/zzcatalogoweb/index.html
@@ -276,8 +276,8 @@ nav a:hover {
             <h2>Dudas</h2>
             <p>En estos momentos busco información sobre: Tio Vivo Extra Primavera 1977 , Pulgarcito Extra Primavera 1966, Pulgarcito Extra Verano/Vacaciones 1975, 7 de los Copito de 1977, TV0639, TV0745, TV0788, TV0797, ZZ372, ZZ528 y algunos Extras numerados.</p>
 <p>Por otra parte estoy buscando con los números NF la continuación de la historieta larga "El Secuestro".</p>
-<p>Estoy repasando los diálogos de algunas historietas de 6 tiras, que aparecen como extrenos después de 1970. Es obvio que al cambiar los diálogos de las viñetas, se han confundido</p>
-<p>Y por último estoy también mirando de dónde han salido algunas historietas de Olé, que le pasa exactamente como lo descrito antes con los diálogos, y no logro encontrar su estreno</p>
+<p>Estoy repasando los diálogos de algunas historietas de 6 tiras, que aparecen como estrenos después de 1970. Es obvio que al cambiar los diálogos de las viñetas, se han confundido</p>
+<p>Y por último estoy también mirando de dónde han salido algunas historietas de Olé, que les pasa exactamente como lo descrito antes con los diálogos, y no logro encontrar su estreno</p>
         </div>
         <div class="amarillo">
             <img src="ZZChisteAmarillo.jpg" alt="Descripción de la imagen" style="max-width: 100%; height: auto;">
